2014-09-02  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_lex_ctxt.h (struct_lex_ctxt): Add line_nb element.

	* nasl/nasl_debug (nasl_perror): Print the error's line number after the
	script name.

	* nasl/exec.c (nasl_exec): Set the lexical context's line number.

2014-09-01  Michael Wiegand <michael.wiegand@greenbone.net>

	* CMakeLists.txt: Re-add parts removed in r20187 as a fallback for
	finding the hiredis library. Upstream does not (yet) support
	pkg-config, so pkg-config files may or may not exist depending on the
	distribution.

2014-09-01  Michael Wiegand <michael.wiegand@greenbone.net>

	* CMakeLists.txt, openvas_cmake_macros,
	nasl/tests/test_script_signing.sh, omp/CMakeLists.txt: Ensure the
	GPLv2+ license notice uses the paragraph suggested by the Free
	Software Foundation.

2014-09-01  Michael Wiegand <michael.wiegand@greenbone.net>

	* nasl/CMakeLists.txt, nasl/nasl_builtin_nmap.c,
	nasl/nasl_builtin_plugins.h, nasl/nasl_cert.c, nasl/nasl_cert.h,
	nasl/nasl_isotime.c, nasl/nasl_isotime.h, nasl/nasl_signature.c,
	nasl/nasl_signature.h, nasl/nasl_smb.c, nasl/nasl_smb.h,
	nasl/nasl_ssh.c, nasl/nasl_ssh.h, nasl/nasl_wmi.c, nasl/nasl_wmi.h,
	nasl/ntlmssp.c, nasl/ntlmssp.h, nasl/openvas_smb_interface.h,
	nasl/openvas_wmi_interface.h, nasl/proto.h, nasl/smb_interface_stub.c,
	nasl/wmi_interface_stub.c, nasl/tests/Makefile,
	nasl/tests/signed.nasl, nasl/tests/test_blowfish.nasl,
	nasl/tests/test_bn.nasl, nasl/tests/test_dh.nasl,
	nasl/tests/test_dsa.nasl, nasl/tests/test_hexstr.nasl,
	nasl/tests/test_isotime.nasl, nasl/tests/test_md.nasl,
	nasl/tests/test_privkey.nasl, nasl/tests/test_rsa.nasl,
	nasl/tests/test_socket.nasl, nasl/tests/testsuiteinit.nasl,
	nasl/tests/testsuitesummary.nasl: Ensure the GPLv2+ license notice
	uses the paragraph suggested by the Free Software Foundation.

2014-09-01  Michael Wiegand <michael.wiegand@greenbone.net>

	* misc/hash_table_file.c, misc/hash_table_file.h, misc/kb.h,