@@ -1,3 +1,11 @@
+2014-09-03  Michael Wiegand <michael.wiegand@greenbone.net>
+
+	Make license of CMakeLists.txt files consistent.
+
+	* doc/CMakeLists.txt: Change license from LGPLv2+ to GPLv2+.
+
+	* misc/CMakeLists.txt: Change license from GPLv2 to GPLv2+.
+
 2014-09-02  Hani Benhabiles <hani.benhabiles@greenbone.net>
 
 	* nasl/nasl_lex_ctxt.h (struct_lex_ctxt): Add line_nb element.
